2012-08-09 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix/unix2dos: Use only C99 compliant predefined macros.

2012-08-07 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix/unix2dos: Print line number when binary char is found.
	* Makefile: By default install text and html manuals of all languages.

2012-08-06 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix/unix2dos: Fix. Locale encoding was not detected when NLS
	  was disabled.
	* common.c: Update comments. Surrogate halves in UTF-8 are invalid.

2012-07-25 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 6.0.1

2012-07-20 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Target 'html' makes also Dutch and Spanish HTML manuals.

2012-07-18 Erwin Waterlander <waterlan@xs4all.nl>
	* manual: Update for options -n and -o. Describe the new permissions of
	  the output file in new-file and old-file mode.
	* README.txt: Added references for the findutils package for Windows
	  and DOS to enable recursive conversions on those platforms.

2012-05-20 Erwin Waterlander <waterlan@xs4all.nl>
	* common.h: Fix compiler warnings "implicit declaration of function
	  'strcasecmp'". Thanks to Michael Schindler
	  <k-m_schindler@sourceforge.net>.

2012-05-11 Julio A. Freyre-Gonzalez <jfreyreg@gmail.com>
	* Update Spanish messages and manual.

2012-05-06 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 6.0
	* man/*/man1/*.pod: Removed =encoding. It is not supported
	  by perl 5.8.8, which is shipped with MinGW and DJGPP.

2012-04-20 Erwin Waterlander <waterlan@xs4all.nl>
	* man/*/man1/*.pod: Set encoding explicitly to Latin-1.
	* Makefile: Target 'doc' makes all man pages.

2012-04-12 Erwin Waterlander <waterlan@xs4all.nl>
	* po/de.po: Update German translations. Thanks to Philipp Thomas.

2012-04-09 Erwin Waterlander <waterlan@xs4all.nl>
	* INSTALL.txt: List the prerequisites.
	* Makefile: Friendlier for DJGPP/MinGW/MSYS.

2012-04-04 Erwin Waterlander <waterlan@xs4all.nl>