@@ -79,6 +79,7 @@ ACKNOWLEDGEMENTS
         Steven H. Levine      Support wildcard expansion on OS/2.
         Steve Hay             Support wildcard expansion on win64.
         Michael Schindler     Fixed compiler warning.
+	Somsak Pattanaprateep Print line number when binary symbol is found.
 
 FINDUTILS
 
